--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		Thu: 10h-13h, 14h-18h<br />
 		Fri: 10h-13h, 14h-18h<br />
 		Sat: 10h-13h, 14h-18h<br />
-		Sun: 10h-13h, 14h-18h<br />
+		Sun: 14h-18h<br />
 		<br />
 	</div>
 	<div class="six columns" id="map-canvas"></div>
