--- a/artists/index.html
+++ b/artists/index.html
@@ -17,13 +17,16 @@ images:
 <h3>Association Artists</h3>
 
 <div class="row">
-	<div class="six columns">
-		<img src="/img/artists/CAT-FB-Portrait-200x200.jpg" />
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/CAT-FB-Portrait-200x200.jpg" />
 	</div>
 	<div class="six columns">
 		<h5><a href="/artists/cat-saunders/">Cat Saunders</a></h5>
 		<p>Works in acrylic, silver-leaf and gouache. Cat's delicate touch captures the detail of her subjects.</p>
 		<p>Oeuvres en acrylique, feuille d'argent et gouache. La touche délicate de la peinture de Cat saisit le détail de ses sujets.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/cat_mosaic.jpg" />
 	</div>
 </div>
 
