resolve #10 - artist's social and web links

--- a/artists/rob-scott/index.html
+++ b/artists/rob-scott/index.html
@@ -9,6 +9,9 @@ images:
 {% include slides.html %}
 
 <br />
+<a href="mailto:rob@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+<br />
+<br />
 
 <p><a href="/img/artists/rob/price_list_2018.jpg">Price list</a> and phone cover <a href="/img/artists/rob/phone_cover_order_form.pdf">order form</a>.</p>
 
