--- a/artists/cat-saunders/index.html
+++ b/artists/cat-saunders/index.html
@@ -9,6 +9,11 @@ images:
 {% include slides.html %}
 
 <br />
+<a href="http://www.catsaundersart.work/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+<a href="https://www.instagram.com/catsaundersart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+<a href="mailto:cat@catsaundersart.work"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+<br />
+<br />
 
 <p>Cat Saunders is a local artist originally from the UK. After graduating from University in Design she discovered her love for painting. Working mainly in Acrylic and Gouache she uses the mountains around her as inspiration for her most recent work. Cat also loves to run the mountain paths around Villars taking her camera with her ready to capture inspiration for her next painting.</p>
 
