--- a/artists/lee-johnson/index.html
+++ b/artists/lee-johnson/index.html
@@ -9,6 +9,11 @@ images:
 {% include slides.html %}
 
 <br />
+<a href="https://leejo.github.io"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+<a href="https://www.instagram.com/leejebay/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+<a href="mailto:lee@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+<br />
+<br />
 
 <p><a href="https://leejo.github.io/projects/alpine_panoramics/">Lee</a> is a photographer originally from Northern England and now living and working in Villars-sur-Ollon. His photography is a hybrid of traditional analog medium/large format plus bespoke digital printing and mounting.</p>
 <p>Lee's photography is typically based around long term projects including locally based ones, such as with Ski Club Villars and a study of surrounding ski resorts in the summer, to longer more personal projects of things he is interested in.</p>
