some minor image tweaks
make banner as wide as page, add both pages to leaflet preview image,
move Sophie to the start of the artists

TODO: mosaics + slideshows for individual artist pages

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -7,7 +7,7 @@ image_dir: /img/
 <u><h5>Gallery Information</h5><u>
 
 <div class="row">
-	<div class="four columns">
+	<div class="six columns">
 		<a href="/downloads/gallery_leaflet_2018.pdf">
 			<img class="u-max-full-width" src="/downloads/gallery_leaflet_2018.jpg" alt="Gallery Leaflet 2018" /><br />
 			Gallery Leaflet 2018
