--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@ layout: main
 
 <div class="row">
 	<div class="six columns">
-<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		30 mars : 18h-20h30
+		20 avril : 18h-20h30<br />
+		<br />
 
-		<a href="/img/artpero_mars16.jpg">
-			<img class="u-max-full-width" src="/img/artpero_mars16.jpg" />
+		<a href="/img/artpero_avr18.jpg">
+			<img class="u-max-full-width" src="/img/artpero_avr18.jpg" />
 		</a>
--->
 
+<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
 		6, 7, et 8 avril : 10h-13h<br />
@@ -25,6 +25,7 @@ layout: main
 		<a href="/img/workshop_avr.jpg">
 			<img class="u-max-full-width" src="/img/workshop_avr.jpg" />
 		</a>
+-->
 	</div>
 
 	<div class="six columns">
