--- a/contact/index.html
+++ b/contact/index.html
@@ -12,10 +12,10 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		<br />
 		Opening Hours (Winter):<br />
 		Mon: Fermé<br />
-		Tue: 10h-13h, 14h-18h<br />
+		Tue: 14h-18h<br />
 		Wed: 10h-13h, 14h-18h<br />
-		Thu: 10h-13h, 14h-18h<br />
-		Fri: 10h-13h, 14h-18h<br />
+		Thu: 14h-18h<br />
+		Fri: 14h-18h<br />
 		Sat: 10h-13h, 14h-18h<br />
 		Sun: 14h-18h<br />
 		<br />
