clay workshops for June

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: main
 
 <div class="row">
 	<div class="six columns">
+<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
 		18 mai : 18h-20h30<br />
@@ -15,17 +16,16 @@ layout: main
 		<a href="/img/artpero_mai18.jpg">
 			<img class="u-max-full-width" src="/img/artpero_mai18.jpg" />
 		</a>
+-->
 
-<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
-		6, 7, et 8 avril : 10h-13h<br />
-		7 et 8 avril (pour les enfants) : 15h-17h<br />
+		29 et 30 Juin, et 1em Juillet : 10h-13h<br />
+		30 Juin et 1em Juillet (pour les enfants) : 15h-17h<br />
 
-		<a href="/img/workshop_avr.jpg">
-			<img class="u-max-full-width" src="/img/workshop_avr.jpg" />
+		<a href="/img/workshop_jun.jpg">
+			<img class="u-max-full-width" src="/img/workshop_jun.jpg" />
 		</a>
--->
 	</div>
 
 	<div class="six columns">
