updating some downloads, add next artpéro

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ layout: main
 	<div class="six columns">
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		18 mai : 18h-20h30<br />
+		La Fête nationale suisse, 1<sup>er</sup> août : 15h-18h<br />
 		<br />
 
-		<a href="/img/artpero_mai18.jpg">
-			<img class="u-max-full-width" src="/img/artpero_mai18.jpg" />
+		<a href="/img/artpero_aug18.jpg">
+			<img class="u-max-full-width" src="/img/artpero_aug18.jpg" />
 		</a>
 
 <!--
