--- a/downloads/index.html
+++ b/downloads/index.html
@@ -42,24 +42,19 @@ image_dir: /img/
 <u><h5>Previous Artpéros and Events</h5><u>
 
 <div class="row">
-	<div class="three columns">
+	<div class="four columns">
+		<a href="/downloads/previous_artperos/artpero_mai18.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_mai18.jpg" alt="April 2018" />
+		</a>
+	</div>
+	<div class="four columns">
 		<a href="/downloads/previous_artperos/artpero_avr18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_avr18.jpg" alt="April 2018" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="four columns">
 		<a href="/downloads/previous_artperos/artpero_mars18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_mars18.jpg" alt="March 2018" />
-		</a>
-	</div>
-	<div class="three columns">
-		<a href="/downloads/previous_artperos/artpero_feb18.jpg">
-			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_feb18.jpg" alt="February 2018" />
-		</a>
-	</div>
-	<div class="three columns">
-		<a href="/downloads/previous_artperos/artpero_jan18.jpg">
-			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jan18.jpg" alt="January 2018" />
 		</a>
 	</div>
 </div>
@@ -67,22 +62,32 @@ image_dir: /img/
 <br />
 
 <div class="row">
-	<div class="three columns">
+	<div class="two columns">
+		<a href="/downloads/previous_artperos/artpero_feb18.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_feb18.jpg" alt="February 2018" />
+		</a>
+	</div>
+	<div class="two columns">
+		<a href="/downloads/previous_artperos/artpero_jan18.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jan18.jpg" alt="January 2018" />
+		</a>
+	</div>
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_dec17.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_dec17.jpg" alt="December 2017" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_oct17.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_oct17.jpg" alt="October 2017" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_sept17.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_sept17.jpg" alt="September 2017" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_jun17.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jun17.jpg" alt="June 2018" />
 		</a>
