--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ layout: main
 
 <div class="row">
 	<div class="six columns">
+
+<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
 		Samedi 15 sep : 15h-18h<br />
@@ -15,17 +17,16 @@ layout: main
 		<a href="/img/artpero_sep18.jpg">
 			<img class="u-max-full-width" src="/img/artpero_sep18.jpg" />
 		</a>
+-->
 
-<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
-		6, 7, et 8 avril : 10h-13h<br />
-		7 et 8 avril (pour les enfants) : 15h-17h<br />
+		5, 6, et 7 octobre : 10h-13h<br />
+		6 et 7 octobre (pour les enfants) : 15h-17h<br />
 
-		<a href="/img/workshop_avr.jpg">
-			<img class="u-max-full-width" src="/img/workshop_avr.jpg" />
+		<a href="/img/workshop_oct.jpg">
+			<img class="u-max-full-width" src="/img/workshop_oct.jpg" />
 		</a>
--->
 	</div>
 
 	<div class="six columns">
