--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 15 sep : 15h-18h<br />
+		Samedi 13 oct : 18h-20h<br />
 		<br />
 
-		<a href="/img/artpero_sep18.jpg">
-			<img class="u-max-full-width" src="/img/artpero_sep18.jpg" />
+		<a href="/img/artpero_oct18.jpg">
+			<img class="u-max-full-width" src="/img/artpero_oct18.jpg" />
 		</a>
--->
 
+<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
 		5, 6, et 7 octobre : 10h-13h<br />
@@ -27,6 +26,8 @@ layout: main
 		<a href="/img/workshop_oct.jpg">
 			<img class="u-max-full-width" src="/img/workshop_oct.jpg" />
 		</a>
+-->
+
 	</div>
 
 	<div class="six columns">
