--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
+<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
 		Samedi 13 oct : 18h-20h<br />
@@ -15,6 +16,15 @@ layout: main
 
 		<a href="/img/artpero_oct18.jpg">
 			<img class="u-max-full-width" src="/img/artpero_oct18.jpg" />
+		</a>
+-->
+
+		<u><h5>November Sale!</h5></u>
+
+		10% off all items in the gallery during November:<br />
+
+		<a href="/img/sale_nov18.jpg">
+			<img class="u-max-full-width" src="/img/sale_nov18.jpg" />
 		</a>
 
 <!--
