--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 13 oct : 18h-20h<br />
+		Samedi 17 nov : 17h-20h<br />
 		<br />
 
-		<a href="/img/artpero_oct18.jpg">
-			<img class="u-max-full-width" src="/img/artpero_oct18.jpg" />
+		<a href="/img/artpero_nov18.jpg">
+			<img class="u-max-full-width" src="/img/artpero_nov18.jpg" />
 		</a>
--->
 
+<!--
 		<u><h5>November Sale!</h5></u>
 
 		10% off all items in the gallery during November:<br />
@@ -27,7 +26,6 @@ layout: main
 			<img class="u-max-full-width" src="/img/sale_nov18.jpg" />
 		</a>
 
-<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
 		5, 6, et 7 octobre : 10h-13h<br />
