--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: main
 
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 17 nov : 17h-20h<br />
+		Samedi 22 nov : 18h-20h - Notre 2<sup>me</sup> Anniversaire !<br />
 		<br />
 
-		<a href="/img/artpero_nov18.jpg">
-			<img class="u-max-full-width" src="/img/artpero_nov18.jpg" />
+		<a href="/img/artpero_dec18.jpg">
+			<img class="u-max-full-width" src="/img/artpero_dec18.jpg" />
 		</a>
 
 <!--
@@ -43,9 +43,9 @@ layout: main
 
 		<p><b>Carte de membre / Membership Card</b></p>
 
-		<p>Devenez membre de l'Association GAA à partir du 1er janvier 2018 et bénéficiez de 10% de réduction sur tous les achats à la galerie et 10.-CHF de moins sur tous les tarifs <a href="/atelier/art-classes/">d’ateliers créatifs</a> jusqu'au 31 décembre 2018 : <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">plus d'info</a>.</p>
+		<p>Devenez membre de l'Association GAA à partir du 1er janvier 2019 et bénéficiez de 10% de réduction sur tous les achats à la galerie et 10.-CHF de moins sur tous les tarifs <a href="/atelier/art-classes/">d’ateliers créatifs</a> jusqu'au 31 décembre 2019 : <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">plus d'info</a>.</p>
 
-		<p>Become a member of the GAA Association from 1st January 2018 and benefit from 10% off all purchases at the gallery and 10.-CHF off all <a href="/atelier/art-classes/">creative workshops</a> until 31st December 2018: <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">more info</a>.</p>
+		<p>Become a member of the GAA Association from 1st January 2019 and benefit from 10% off all purchases at the gallery and 10.-CHF off all <a href="/atelier/art-classes/">creative workshops</a> until 31st December 2019: <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">more info</a>.</p>
 
 		<p><b>Contact us: </b><a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
 
