--- a/downloads/index.html
+++ b/downloads/index.html
@@ -42,32 +42,42 @@ image_dir: /img/
 <u><h5>Previous Artpéros and Events</h5><u>
 
 <div class="row">
-	<div class="two columns">
+	<div class="four columns">
+		<a href="/downloads/previous_artperos/artpero_dec18.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_dec18.jpg" alt="December 2018" />
+		</a>
+	</div>
+	<div class="four columns">
 		<a href="/downloads/previous_artperos/artpero_oct18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_oct18.jpg" alt="October 2018" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="four columns">
 		<a href="/downloads/previous_artperos/artpero_sep18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_sep18.jpg" alt="September 2018" />
 		</a>
 	</div>
-	<div class="two columns">
+</div>
+
+<br />
+	
+<div class="row">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_aug18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_aug18.jpg" alt="August 2018" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_mai18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_mai18.jpg" alt="April 2018" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_avr18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_avr18.jpg" alt="April 2018" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_mars18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_mars18.jpg" alt="March 2018" />
 		</a>
