--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: main
 
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 22 nov : 18h-20h - Notre 2<sup>me</sup> Anniversaire !<br />
+		Samedi 5 Jan : 17h-20h<br />
 		<br />
 
-		<a href="/img/artpero_dec18.jpg">
-			<img class="u-max-full-width" src="/img/artpero_dec18.jpg" />
+		<a href="/img/artpero_jan19.jpg">
+			<img class="u-max-full-width" src="/img/artpero_jan19.jpg" />
 		</a>
 
 <!--
