add Sophie's catalogues
also add instagram links and update index for next artpéro date

--- a/artists/index.html
+++ b/artists/index.html
@@ -14,6 +14,7 @@ layout: main
 			<a href="/artists/sophie-scott/">Sophie Scott</a>
 			&nbsp;
 			<a href="mailto:sjs@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			<a href="https://www.instagram.com/sophiescott_art/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 		</h5>
 		<p>Works in oil, pastels and watercolour. Sophie's paintings bring to life the colours of the mountains.</p>
 		<p>Oeuvres en huile, pastels et aquarelles. Les peintures de Sophie animent les couleurs des montagnes.</p>
@@ -56,6 +57,7 @@ layout: main
 			<a href="/artists/rob-scott/">Rob Scott</a>
 			&nbsp;
 			<a href="mailto:rob@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			<a href="https://www.instagram.com/robscott12/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 		</h5>
 		<p>Graphic designer and illustrator with a passion for the beauty of the Villars-Gryon resort.</p>
 		<p>Graphiste et illustrateur avec une passion de la beauté de la région de Villars-Gryon.</p>
