--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Prochaines Artpéros / Next Artpéros</h5></u>
+		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 2 et 23 Fev : 17h-20h<br />
+		Samedi 23 Fev : 18h-20h30<br />
 		<br />
 
 		<a href="/img/artpero_feb19.jpg">
