--- a/artists/rob-scott/index.html
+++ b/artists/rob-scott/index.html
@@ -10,6 +10,7 @@ images:
 
 <br />
 <a href="mailto:rob@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+<a href="https://www.instagram.com/robscott12/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 <br />
 <br />
 
