--- a/artists/sophie-scott/index.html
+++ b/artists/sophie-scott/index.html
@@ -10,13 +10,18 @@ images:
 
 <br />
 <a href="mailto:sjs@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+<a href="https://www.instagram.com/sophiescott_art/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 <br />
 <br />
 
 <p>Sophie is a qualified artist, art teacher at Aiglon College in Chesières and also gives private lessons. She originates from Wales in the United Kingdom but has been living in Switzerland for a number of years. Having studied at Carmarthenshire College of Art and at Cardiff University her desire to travel and a love of nature brought her to Gryon in 1999.</p>
 <p>Sophie enjoys painting the mountains, landscapes and lakes of the region, experimenting with a variety of techniques and materials such as watercolours, oils, acrylics and soft pastels. She has had successful exhibitions in Gryon, Solalex and Villars, exploring a variety of styles inspired by artists such as Paul Cézanne, Ferdinand Hodler et Georges Braque.</p>
 
+<p>Sophie's <a href="/artists/sophie-scott/catalogue_2019_summer.pdf">summer</a> and <a href="/artists/sophie-scott/catalogue_2019_winter.pdf">winter</a> catalgoues are available for download.</p>
+
 <hr>
 
 <p>Sophie est une artiste qualifiée, professeur d’art à Aiglon Collège, Chesières, dispensant également des cours d'art privés. Habitant en Suisse depuis de nombreuses années, elle a auparavant vécu au Pays de Galles (Royaume-Uni). Après avoir étudié au Carmarthenshire College d’Art et à l'Université de Cardiff, son désir de voyager et un amour de la nature l'ont amenée à Gryon en 1999.</p>
 <p>Sophie privilégie les peintures de montagnes, de paysages et de lacs de la région, en utilisant différentes techniques, telles que l'aquarelle, l'huile, l’acrylique ou les pastels secs. En tant qu'artiste, elle a organisé avec succès des expositions à Gryon, à Solalex et à Villars, tout en explorant une gamme de styles inspirés d'artistes tels que Paul Cézanne, Ferdinand Hodler et Georges Braque.</p>
+
+<p>Les catalogues <a href="/artists/sophie-scott/catalogue_2019_summer.pdf">d'été</a> et <a href="/artists/sophie-scott/catalogue_2019_winter.pdf">d'hiver</a> de Sophie sont disponibles au téléchargement</a>
