--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
+		<u><h5>Prochaines Artpéros / Next Artpéros</h5></u>
 
-		Samedi 23 Fev : 18h-20h30<br />
+		Samedi 9 et 23 Mars : 18h-20h30<br />
 		<br />
 
-		<a href="/img/artpero_feb19.jpg">
-			<img class="u-max-full-width" src="/img/artpero_feb19.jpg" />
+		<a href="/img/artpero_mar19.jpg">
+			<img class="u-max-full-width" src="/img/artpero_mar19.jpg" />
 		</a>
 
 <!--
