--- a/artists/index.html
+++ b/artists/index.html
@@ -94,3 +94,9 @@ layout: main
 <h3>Visiting Artists</h3>
 
 {% include visiting_artists.html %}
+
+<hr>
+
+<h3>Previous Artists</h3>
+
+{% include previous_artists.html %}
