--- a/downloads/index.html
+++ b/downloads/index.html
@@ -42,22 +42,27 @@ image_dir: /img/
 <u><h5>Previous Artpéros and Events</h5><u>
 
 <div class="row">
-	<div class="three columns">
+	<div class="two columns">
+		<a href="/downloads/previous_artperos/artpero_avr19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_avr19.jpg" alt="April 2019" />
+		</a>
+	</div>
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_mar19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_mar19.jpg" alt="March 2019" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_feb19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_feb19.jpg" alt="February 2019" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_jan19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jan19.jpg" alt="January 2019" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_dec18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_dec18.jpg" alt="December 2018" />
 		</a>
