--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: main
 
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 13 avril : 18h-20h30<br />
+		Samedi 22 juin : 18h-20h30<br />
 		<br />
 
-		<a href="/img/artpero_avr19.jpg">
-			<img class="u-max-full-width" src="/img/artpero_avr19.jpg" />
+		<a href="/img/artpero_jun19.jpg">
+			<img class="u-max-full-width" src="/img/artpero_jun19.jpg" />
 		</a>
 
 <!--
