--- a/downloads/index.html
+++ b/downloads/index.html
@@ -43,6 +43,11 @@ image_dir: /img/
 
 <div class="row">
 	<div class="two columns">
+		<a href="/downloads/previous_artperos/artpero_jun19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jun19.jpg" alt="June 2019" />
+		</a>
+	</div>
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_avr19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_avr19.jpg" alt="April 2019" />
 		</a>
