--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
+		<u><h5>Prochaines Artpéros / Next Artpéros</h5></u>
 
-		Samedi 22 juin : 18h-20h30<br />
+		Vendredi 12 jul / Samedi 27 jul : 18h-20h30<br />
 		<br />
 
-		<a href="/img/artpero_jun19.jpg">
-			<img class="u-max-full-width" src="/img/artpero_jun19.jpg" />
+		<a href="/img/artpero_jul19.jpg">
+			<img class="u-max-full-width" src="/img/artpero_jul19.jpg" />
 		</a>
 
 <!--
