update association leaflet and artist info

--- a/artists/rob-scott/index.html
+++ b/artists/rob-scott/index.html
@@ -16,9 +16,9 @@ images:
 
 <p><a href="/img/artists/rob/price_list_2019.pdf">Price list</a>, phone cover <a href="/img/artists/rob/phone_cover_prices.jpg">prices</a> and <a href="/img/artists/rob/phone_cover_order_form.jpg">order form</a>.</p>
 
-<p>Robin Scott is a graphic designer and illustrator with a passion for the beauty of the Villars-Gryon resort, whose wonderful graphic creations and illustrations take on a past "poster art" that so inspired Alpine tourism</p>
+<p>Robin Scott is a Swiss graphic designer and illustrator originating from Canterbury, England, but he has lived nearly 20 years in Switzerland. He is inspired by the beauty of the Villars-Gryon region and the characters he meets. His amaz- ing graphics and digital creations are inspired by vintage tourist posters which he has married with his own distinctive contemporary style.</p>
 
 <hr>
 
-<p>Robin Scott est graphiste et illustrateur avec une passion de la beauté de la région de Villars-Gryon. Ses créations sont étonnantes, alliant un style contemporain, mais aussi rétro, inspiré des anciens affiches vantant le tourism alpin.</p>
+<p>Robin Scott est graphiste et illustrateur suisse ori- ginaire de Canterbury en Angleterre, mais vit depuis près de 20 ans en Suisse. Il a une passion de la beauté de la région de Villars-Gryon. Ses créations sont étonnantes, alliant un style contemporain, mais aussi rétro, inspiré des anciennes affiches vantant le tourisme alpin.</p>
 <p></p>
