--- a/downloads/index.html
+++ b/downloads/index.html
@@ -8,10 +8,10 @@ image_dir: /img/
 
 <div class="row">
 	<div class="six columns">
-		<a href="/downloads/gallery_leaflet_2018.pdf">
-			<img class="u-max-full-width" src="/downloads/gallery_leaflet_2018.jpg" alt="Gallery Leaflet 2018" /><br />
-			Gallery Leaflet 2018
-		</a>
+		<img class="u-max-full-width" src="/downloads/gallery_leaflet_2018.jpg" alt="Gallery Leaflet" /><br />
+		Gallery Leaflet 2019: <a href="/downloads/gallery_leaflet_2019_FR.pdf">Français</a>
+		/
+		<a href="/downloads/gallery_leaflet_2019_EN.pdf">English</a>
 	</div>
 </div>
 
