--- a/artists/cat-saunders/index.html
+++ b/artists/cat-saunders/index.html
@@ -15,16 +15,14 @@ images:
 <br />
 <br />
 
-<p>Cat Saunders is a local artist originally from the UK. After graduating from University in Design she discovered her love for painting. Working mainly in Acrylic and Gouache she uses the mountains around her as inspiration for her most recent work. Cat also loves to run the mountain paths around Villars taking her camera with her ready to capture inspiration for her next painting.</p>
+<p>Cat Saunders is a local freelance artist living in Chesières, originating from the UK. Having finished her art degree she discovered a passion for painting.</p>
 
-<blockquote><p>
-“Whilst I’m running it’s a good excuse to keep looking around at the view rather than just the path below my feet.”
-</p></blockquote>
+<p>The mountains are a source of inspiration for new artworks rendered in acrylic, gouache and metallic leaf on hand stretched panoramic canvases. A love for trail running takes her around the Villars region, with
+a camera poised to catch any new inspiration.</p>
 
 <hr>
 
-<p>Cat Saunders est une artiste vivant à Chesières, originaire du Royaume Uni. Après avoir terminé ses études de dessin à l’université, elle se découvre une passion pour la peinture. Les montagnes sont une source d’inspiration pour ses nouvelles oeuvres à l’acrylique et gouache. Un amour pour la trail  l’amène tout autour de Villars, un appareil photo prêt à saisir l’inspiration pour une nouvelle peinture.</p>
+<p>Cat Saunders est une artiste qui habit à Chesières, originaire du Royaume Uni. Après avoir termi- né ses études de dessin à l’universi- té, elle se dé- couvre une pas- sion pour la pein-
+ture.</p>
 
-<blockquote><p>
-“C’est une très bonne excuse de garder l’oeil à l’horizon plutôt qu’à mes pieds,” dit-elle.
-</p></blockquote>
+<p>Les montagnes sont une source d’inspira- tion pour ses nouvelles œuvres à l’acrylique et gouache. Un amour pour le trail l’amène tout autour de Villars, un appareil photo prêt à saisir l’inspiration pour une nouvelle peinture.</p>
