update various leaflets

--- a/atelier/art-classes/index.html
+++ b/atelier/art-classes/index.html
@@ -4,7 +4,7 @@ layout: artist
 image_dir: /img/atelier/art-classes/
 images:
     - Gallery-8743-col-Web.jpg
-    - atelier_member_hours_2019.jpg
+    - atelier_member_hours_2019b.jpg
 ---
 
 {% include slides.html %}
@@ -31,23 +31,7 @@ images:
 
 <h5>More Information</h5>
 
-<div class="row">
-	<div class="four columns">
-		<a href="/img/atelier/art-classes/a5_poster_for_art_classes_2019.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/a5_poster_for_art_classes_2019.jpg" />
-		</a>
-	</div>
-	<div class="four columns">
-		<a href="/img/atelier/art-classes/kids_poster_EN_2019.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_EN_2019.jpg" />
-		</a>
-	</div>
-	<div class="four columns">
-		<a href="/img/atelier/art-classes/kids_poster_FR_2019.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_FR_2019.jpg" />
-		</a>
-	</div>
-</div>
+{% include art_classes_posters.html %}
 
 <h5>Atelier Hours and Calendar</h5>
 
