--- a/contact/index.html
+++ b/contact/index.html
@@ -10,14 +10,14 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		+41 76 343 70 28<br />
 		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
 		<br />
-		Opening Hours (Hiver, Fermé Noël et N.Year):<br />
-		Lun: 10h-14h 14.30-18.30<br />
-		Mar: 10h-14h 14.30-18.30<br />
-		Mer: 10h-14h 14.30-18.30<br />
-		Jeu: 10h-14h 14.30-18.30<br />
-		Ven: 10h-14h 14.30-18.30<br />
-		Sam: 10h-14h 14.30-18.30<br />
-		Dim: 10h-13h 15h-18h<br />
+		Opening Hours:<br />
+		Lun: Fermé<br />
+		Mar: --------- 15.00-18.00<br />
+		Mer: 10h-12h 15.00-18.00<br />
+		Jeu: --------- 15.00-18.00<br />
+		Ven: --------- 15.00-18.00<br />
+		Sam: 10h-13h 15.00-18.00<br />
+		Dim: 10h-13h <br />
 		<br />
 	</div>
 	<div class="six columns" id="map-canvas"></div>
