--- a/downloads/index.html
+++ b/downloads/index.html
@@ -19,55 +19,54 @@ image_dir: /img/
 
 <u><h5>Atelier</h5><u>
 
-<div class="row">
-	<div class="four columns">
-		<a href="/img/atelier/art-classes/a5_poster_for_art_classes_2018.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/a5_poster_for_art_classes_2018.jpg" />
-		</a>
-	</div>
-	<div class="four columns">
-		<a href="/img/atelier/art-classes/kids_poster_EN_2018.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_EN_2018.jpg" />
-		</a>
-	</div>
-	<div class="four columns">
-		<a href="/img/atelier/art-classes/kids_poster_FR_2018.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_FR_2018.jpg" />
-		</a>
-	</div>
-</div>
+{% include art_classes_posters.html %}
 
 <br />
 
 <u><h5>Previous Artpéros and Events</h5><u>
 
 <div class="row">
-	<div class="two columns">
+	<div class="twelve columns">
+		<a href="/downloads/previous_artperos/artpero_jul19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jul19.jpg" alt="June 2019" />
+		</a>
+	</div>
+</div>
+
+<br />
+
+<div class="row">
+	<div class="six columns">
 		<a href="/downloads/previous_artperos/artpero_jun19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jun19.jpg" alt="June 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="six columns">
 		<a href="/downloads/previous_artperos/artpero_avr19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_avr19.jpg" alt="April 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+</div>
+
+<br />
+
+<div class="row">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_mar19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_mar19.jpg" alt="March 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_feb19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_feb19.jpg" alt="February 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_jan19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jan19.jpg" alt="January 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_dec18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_dec18.jpg" alt="December 2018" />
 		</a>
@@ -110,7 +109,7 @@ image_dir: /img/
 </div>
 
 <br />
-
+	
 <div class="row">
 	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_feb18.jpg">
