--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Prochaines Artpéros / Next Artpéros</h5></u>
+		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
 		Samedi 7 et 28 sep : 18h-20h30<br />
+		Artpero and Book Launch!<br />
 		<br />
 
 		<a href="/img/artpero_sep19.jpg">
