new artpero dates + poster

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -25,23 +25,24 @@ image_dir: /img/
 
 <u><h5>Previous Artpéros and Events</h5><u>
 
+
 <div class="row">
-	<div class="twelve columns">
-		<a href="/downloads/previous_artperos/artpero_jul19.jpg">
-			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jul19.jpg" alt="June 2019" />
+	<div class="three columns">
+		<a href="/downloads/previous_artperos/artpero_sep19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_sep19.jpg" alt="September 2019" />
 		</a>
 	</div>
-</div>
-
-<br />
-
-<div class="row">
-	<div class="six columns">
+	<div class="three columns">
+		<a href="/downloads/previous_artperos/artpero_jul19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jul19.jpg" alt="July 2019" />
+		</a>
+	</div>
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_jun19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jun19.jpg" alt="June 2019" />
 		</a>
 	</div>
-	<div class="six columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_avr19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_avr19.jpg" alt="April 2019" />
 		</a>
@@ -138,7 +139,7 @@ image_dir: /img/
 	</div>
 	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_jun17.jpg">
-			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jun17.jpg" alt="June 2018" />
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jun17.jpg" alt="June 2017" />
 		</a>
 	</div>
 </div>
