--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ layout: main
 
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 7 et 28 sep : 18h-20h30<br />
-		Artpero and Book Launch!<br />
+		Samedi 26 oct : 18h-20h30<br />
+		Artpero (AGM from 17h)<br />
 		<br />
 
-		<a href="/img/artpero_sep19.jpg">
-			<img class="u-max-full-width" src="/img/artpero_sep19.jpg" />
+		<a href="/img/artpero_oct19.jpg">
+			<img class="u-max-full-width" src="/img/artpero_oct19.jpg" />
 		</a>
 
 <!--
