correct typos in Lee's bio

--- a/artists/lee-johnson/index.html
+++ b/artists/lee-johnson/index.html
@@ -15,10 +15,10 @@ images:
 <br />
 <br />
 
-<p>Lee Johnson is a photographer originating from the north of England who now works in Villars-sur -Ollon. He approaches his photography using both very traditional and digital apparatus, us- ing a variety of films and processing techniques.</p>
-<p>Lee’s photographic prints are inspired by the beautiful panoramic alpine scenes, typically developed in black & white, mounted on alu- minium. He has many long term projects which inspire his creative side, such as working with the Villars Ski Club, Villars Vanguard and exploring Formula One destinations further-a-field.</p>
+<p>Lee Johnson is a photographer originating from the north of England who now works in Villars-sur-Ollon. He approaches his photography using both very traditional and digital apparatus, using a variety of films and processing techniques.</p>
+<p>Lee’s photographic prints are inspired by the beautiful panoramic alpine scenes, typically developed in black &amp; white, mounted on aluminium. He has many long term projects which inspire his creative side, such as working with the Villars Ski Club, Villars Vanguard and exploring Formula One destinations further-a-field.</p>
 
 <hr>
 
-<p>Lee Johnson est un photographe originaire du nord de l'Angleterre qui vit et travaille main- tenant à Villars-sur-Ollon. Sa photographie est un hybride de format moyen analogique traditionnel, plus une impression et un montage numérique sur mesure.</p>
-<p>La photographie de Lee est typiquement basée sur des projets à long terme, notamment des sites locaux, tels qu’avec le Ski Club Villars et une étude sur les stations de ski environnantes en été, ainsi que des projets plus longs et plus personnels de sujets qui l’'intéressent.</p>
+<p>Lee Johnson est un photographe originaire du nord de l'Angleterre qui vit et travaille maintenant à Villars-sur-Ollon. Sa photographie est un hybride de format moyen analogique traditionnel, plus une impression et un montage numérique sur mesure.</p>
+<p>La photographie de Lee est typiquement basée sur des projets à long terme, notamment des sites locaux, tels qu’avec le Ski Club Villars et une étude sur les stations de ski environnantes en été, ainsi que des projets plus longs et plus personnels de sujets qui l’intéressent.</p>
