--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 26 oct : 18h-20h30<br />
-		Artpero (AGM from 17h)<br />
+		Samedi 23 nov : 18h-20h30<br />
+		Artpero &amp; Vernissage<br />
 		<br />
 
-		<a href="/img/artpero_oct19.jpg">
-			<img class="u-max-full-width" src="/img/artpero_oct19.jpg" />
+		<a href="/img/artpero_nov19.jpg">
+			<img class="u-max-full-width" src="/img/artpero_nov19.jpg" />
 		</a>
--->
+<!--
 
 		<u><h5>November Sale!</h5></u>
 
@@ -28,7 +27,6 @@ layout: main
 			<img class="u-max-full-width" src="/img/sale_nov19.jpg" />
 		</a>
 
-<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
 		5, 6, et 7 octobre : 10h-13h<br />
