--- a/downloads/index.html
+++ b/downloads/index.html
@@ -28,6 +28,16 @@ image_dir: /img/
 
 <div class="row">
 	<div class="three columns">
+		<a href="/downloads/previous_artperos/artpero_nov19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_nov19.jpg" alt="November 2019" />
+		</a>
+	</div>
+	<div class="three columns">
+		<a href="/downloads/previous_artperos/artpero_oct19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_oct19.jpg" alt="October 2019" />
+		</a>
+	</div>
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_sep19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_sep19.jpg" alt="September 2019" />
 		</a>
@@ -37,37 +47,37 @@ image_dir: /img/
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jul19.jpg" alt="July 2019" />
 		</a>
 	</div>
-	<div class="three columns">
-		<a href="/downloads/previous_artperos/artpero_jun19.jpg">
-			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jun19.jpg" alt="June 2019" />
-		</a>
-	</div>
-	<div class="three columns">
-		<a href="/downloads/previous_artperos/artpero_avr19.jpg">
-			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_avr19.jpg" alt="April 2019" />
-		</a>
-	</div>
 </div>
 
 <br />
 
 <div class="row">
-	<div class="three columns">
+	<div class="two columns">
+		<a href="/downloads/previous_artperos/artpero_jun19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jun19.jpg" alt="June 2019" />
+		</a>
+	</div>
+	<div class="two columns">
+		<a href="/downloads/previous_artperos/artpero_avr19.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_avr19.jpg" alt="April 2019" />
+		</a>
+	</div>
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_mar19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_mar19.jpg" alt="March 2019" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_feb19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_feb19.jpg" alt="February 2019" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_jan19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jan19.jpg" alt="January 2019" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="two columns">
 		<a href="/downloads/previous_artperos/artpero_dec18.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_dec18.jpg" alt="December 2018" />
 		</a>
