--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ layout: main
 
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 23 nov : 18h-20h30<br />
-		Artpero &amp; Vernissage<br />
+		Samedi 21 dec : 17h30-20h30<br />
+		Notre 3<sup>e</sup> anniversaire<br />
 		<br />
 
-		<a href="/img/artpero_nov19.jpg">
-			<img class="u-max-full-width" src="/img/artpero_nov19.jpg" />
+		<a href="/img/artpero_dec19.jpg">
+			<img class="u-max-full-width" src="/img/artpero_dec19.jpg" />
 		</a>
 <!--
 
