SCV expo poster

--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Christmas Opening Hours:</h5></u>
+		<u><h5>Exposition Ski Club Villars:</h5></u>
 
+		11-19 janvier<br />
+		Vernissage : 11 janvier 17h30-20h30<br />
 		<br />
 
+		<a href="/img/scv_expo_poster.jpg">
+			<img class="u-max-full-width" src="/img/scv_expo_poster.jpg" />
+		</a>
+<!--
+		<u><h5>Christmas Opening Hours:</h5></u>
+		<br />
 		<a href="/img/xmas_2019.jpg">
 			<img class="u-max-full-width" src="/img/xmas_2019.jpg" />
 		</a>
-<!--
+
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
 		Samedi 21 dec : 17h30-20h30<br />
