--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@ layout: main
 
 		<u><h5>Exposition Ski Club Villars:</h5></u>
 
-		11-19 janvier<br />
-		Vernissage : 11 janvier 17h30-20h30<br />
+		11-19 janvier. Vernissage : 11 jan 17h30-20h30<br />
 		<br />
 
 		<a href="/img/scv_expo_poster.jpg">
