add general assembly minutes

--- a/association/index.html
+++ b/association/index.html
@@ -19,3 +19,10 @@ layout: main
 		<li>Lee Johnson of Huddersfield (UK), residing in Villars-sur-Ollon (VD) – Secretary, photographer &amp; webmaster</li>
 	</ul>
 </p>
+
+<p>General Assembly minutes:
+	<ul>
+		<li><a href="/association/20181222_GAA_AGM_EN.docx.pdf">December 2018</a></li>
+		<li><a href="/association/20191026_GAA_AGM_EN.docx.pdf">October 2019</a></li>
+	</ul>
+</p>
