--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ layout: main
 
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Vendredi 14 fév : 17h-20<br />
-		Soirée St Valentin<br />
+		Vendredi 14 fév : 17h-20h<br />
+		Soirée St Valentin et Soldes - 10%<br />
 		<br />
 
 		<a href="/img/artpero_feb20.jpg">
