--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
+		<u><h5>Clay Modelling Workshops</h5></u>
 
-		Vendredi 14 fév : 17h-20h<br />
-		Soirée St Valentin et Soldes - 10%<br />
-		<br />
+		28 et 29 février (pour les adultes) : 14h30-16h30<br />
+		1er mars (pour adultes et/ou enfants) : 14h30-16h30<br />
 
-		<a href="/img/artpero_feb20.jpg">
-			<img class="u-max-full-width" src="/img/artpero_feb20.jpg" />
+		<a href="/img/workshop_feb.jpg">
+			<img class="u-max-full-width" src="/img/workshop_feb.jpg" />
 		</a>
 
 	</div>
