update opening hours

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
+<!--
 		<u><h5><strike>Prochaine Artpéro / Next Artpéro</strike></h5></u>
 
 		<strike>Samedi 21 mars : 18h-20h30</strike><br />
@@ -16,6 +17,21 @@ layout: main
 		<a href="/img/closure_fr.jpg">
 			<img class="u-max-full-width" src="/img/closure_fr.jpg" />
 		</a>
+-->
+		<h5><strong>Nous rouvrirons à partir du 11 mai</strong></h5>
+		Lun: --------- 14.30-18.00<br />
+		Mar: --------- 14.30-18.00<br />
+		Mer: --------- 14.30-18.00<br />
+		Jeu: --------- 14.30-18.00<br />
+		Ven: --------- 14.30-18.00<br />
+		Sam: --------- 14.30-18.00<br />
+		Dim: Fermé<br />
+		<br />
+		<a href="mailto:info@galeriealpine.com"><i class=""></i>info@galeriealpine.com</a><br />
+		024 495 1010<br />
+		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
+		<br />
+
 <!--
 		<a href="/img/artpero_mar20.jpg">
 			<img class="u-max-full-width" src="/img/artpero_mar20.jpg" />
