--- a/contact/index.html
+++ b/contact/index.html
@@ -11,13 +11,13 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
 		<br />
 		Opening Hours:<br />
-		Lun: Fermé<br />
-		Mar: --------- 15.00-18.00<br />
-		Mer: 10h-12h 15.00-18.00<br />
-		Jeu: --------- 15.00-18.00<br />
-		Ven: --------- 15.00-18.00<br />
-		Sam: 10h-13h 15.00-18.00<br />
-		Dim: 10h-13h <br />
+		Lun: --------- 14.30-18.00<br />
+		Mar: --------- 14.30-18.00<br />
+		Mer: --------- 14.30-18.00<br />
+		Jeu: --------- 14.30-18.00<br />
+		Ven: --------- 14.30-18.00<br />
+		Sam: --------- 14.30-18.00<br />
+		Dim: Fermé<br />
 		<br />
 	</div>
 	<div class="six columns" id="map-canvas"></div>
