--- a/index.html
+++ b/index.html
@@ -8,31 +8,16 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-<!--
-		<u><h5><strike>Prochaine Artpéro / Next Artpéro</strike></h5></u>
+		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		<strike>Samedi 21 mars : 18h-20h30</strike><br />
-		Annulé<br />
-
-		<a href="/img/closure_fr.jpg">
-			<img class="u-max-full-width" src="/img/closure_fr.jpg" />
-		</a>
--->
-		<h5><strong>Nous rouvrirons à partir du 11 mai</strong></h5>
-		Lun: --------- 14.30-18.00<br />
-		Mar: --------- 14.30-18.00<br />
-		Mer: --------- 14.30-18.00<br />
-		Jeu: --------- 14.30-18.00<br />
-		Ven: --------- 14.30-18.00<br />
-		Sam: --------- 14.30-18.00<br />
-		Dim: Fermé<br />
+		Samedi 19 sep : 18h-20h<br />
 		<br />
 
-		<a href="/img/reopening.jpg">
-			<img class="u-max-full-width" src="/img/reopening.jpg" />
+		<a href="/img/closure_fr.jpg">
+			<img class="u-max-full-width" src="/img/artpero_sep20.jpg" />
 		</a>
-<!--
 
+<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
 		5, 6, et 7 octobre : 10h-13h<br />
