--- a/association/index.html
+++ b/association/index.html
@@ -22,7 +22,8 @@ layout: main
 
 <p>General Assembly minutes:
 	<ul>
-		<li><a href="/association/20181222_GAA_AGM_EN.docx.pdf">December 2018</a></li>
+		<li><a href="/association/20201017_GAA_AGM_EN.pdf">October 2020</a></li>
 		<li><a href="/association/20191026_GAA_AGM_EN.docx.pdf">October 2019</a></li>
+		<li><a href="/association/20181222_GAA_AGM_EN.docx.pdf">December 2018</a></li>
 	</ul>
 </p>
