updates for 2021 + jan sale

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
+		<u><h5>January Sale!</h5></u>
+
+		10% off all purches greater than 50.- CHF or more in the gallery during January:<br />
+		<br />
+	    <a href="/img/sale_jan_2021.jpg">
+			<img class="u-max-full-width" src="/img/sale_jan_2021.jpg" />
+		</a>
+<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
 		Samedi 19 sep : 18h-20h<br />
@@ -17,7 +25,6 @@ layout: main
 			<img class="u-max-full-width" src="/img/artpero_sep20.jpg" />
 		</a>
 
-<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
 		5, 6, et 7 octobre : 10h-13h<br />
@@ -35,9 +42,9 @@ layout: main
 
 		<p><b>Carte de membre / Membership Card</b></p>
 
-		<p>Devenez membre de l'Association GAA à partir du 1er janvier 2020 et bénéficiez de 10% de réduction sur tous les achats à la galerie et 10.-CHF de moins sur tous les tarifs <a href="/atelier/art-classes/">d’ateliers créatifs</a> jusqu'au 31 décembre 2020 : <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">plus d'info</a>.</p>
+		<p>Devenez membre de l'Association GAA à partir du 1er janvier 2021 et bénéficiez de 10% de réduction sur tous les achats à la galerie et 10.-CHF de moins sur tous les tarifs <a href="/atelier/art-classes/">d’ateliers créatifs</a> jusqu'au 31 décembre 2021 : <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">plus d'info</a>.</p>
 
-		<p>Become a member of the GAA Association from 1st January 2020 and benefit from 10% off all purchases at the gallery and 10.-CHF off all <a href="/atelier/art-classes/">creative workshops</a> until 31st December 2020: <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">more info</a>.</p>
+		<p>Become a member of the GAA Association from 1st January 2021 and benefit from 10% off all purchases at the gallery and 10.-CHF off all <a href="/atelier/art-classes/">creative workshops</a> until 31st December 2021: <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">more info</a>.</p>
 
 		<p><b>Contact us: </b><a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
 
