--- a/downloads/index.html
+++ b/downloads/index.html
@@ -9,9 +9,9 @@ image_dir: /img/
 <div class="row">
 	<div class="six columns">
 		<img class="u-max-full-width" src="/downloads/gallery_leaflet_2018.jpg" alt="Gallery Leaflet" /><br />
-		Gallery Leaflet 2019: <a href="/downloads/gallery_leaflet_2019_FR.pdf">Français</a>
+		Gallery Leaflet 2021: <a href="/downloads/gallery_leaflet_2020_FR.pdf">Français</a>
 		/
-		<a href="/downloads/gallery_leaflet_2019_EN.pdf">English</a>
+		<!--<a href="/downloads/gallery_leaflet_2019_EN.pdf">-->English<!--</a>-->
 	</div>
 </div>
 
@@ -27,17 +27,22 @@ image_dir: /img/
 
 
 <div class="row">
-	<div class="four columns">
+	<div class="three columns">
+		<a href="/downloads/previous_artperos/artpero_sep20.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_sep20.jpg" alt="September 2020" />
+		</a>
+	</div>
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_feb20.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_feb20.jpg" alt="February 2020" />
 		</a>
 	</div>
-	<div class="four columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/scv_expo_poster.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/scv_expo_poster.jpg" alt="Ski Clib Villars Expo" />
 		</a>
 	</div>
-	<div class="four columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_dec19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_dec19.jpg" alt="December 2019" />
 		</a>
