--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Click & Collect</h5></u>
+		<u><h5>Réouverture !</h5></u>
 
-		<p>Following the Federal Council's decision we will be closed from
-		January 18th to February 28th. We therefore welcome the opportunity
-		to be able to invite you to contact us at
-		<a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a>
-		or call 079&nbsp;903&nbsp;2651 between 2pm-6pm if you wish to make a rendezvous
-		to "click and collect" works of art in complete safety</p>
+		<p>Nous sommes ravis d'annoncer la réouverture de la galerie.</p>
 
-	    <a href="/img/jan_2021_covid.jpg">
-			<img class="u-max-full-width" src="/img/jan_2021_covid.jpg" />
+		<p>We are delighted to announce the reopening of the gallery.</p>
+
+	    <a href="/img/reopening_mars_2021.jpg">
+			<img class="u-max-full-width" src="/img/reopening_mars_2021.jpg" />
 		</a>
 <!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
